<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="navController"
            type="androidx.navigation.NavController" />
        <variable
            name="viewModel"
            type="com.br.appbusinesscard2.ui.addcard.AddCardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".ui.addcard.AddCardFragment">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> navController.popBackStack()"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_new_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_close"
            tools:text="@string/label_description_new_card"
            style="?attr/textAppearanceHeadline5"
            cardFromFragmentLabel="@{viewModel.showEditLabel}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addFieldBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_margin"
            android:background="@drawable/rounded_rec"
            android:elevation="@dimen/card_elevation"
            android:padding="@dimen/half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_new_card"
            app:layout_constraintVertical_bias="0.33" >



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/label_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.nameField}"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/label_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.phoneField}"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/label_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.emailField}"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/label_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.companyField}"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/addColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:checkedChip="@+id/chipAcqua"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_company" >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAcqua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_acqua"
                    android:onClick='@{(color) -> viewModel.setCustomBackground("#FF32A586")'
                    app:chipBackgroundColor="@color/cardAcquaGreen"
                    style="@style/Widget.MaterialComponents.Chip.Filter" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOchre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ochre"
                    android:onClick='@{(color) -> viewModel.setCustomBackground("#FFA67F38")'
                    app:chipBackgroundColor="@color/cardYellowOchre"
                    style="@style/Widget.MaterialComponents.Chip.Filter" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBrick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_brick"
                    android:onClick='@{(color) -> viewModel.setCustomBackground("#FFDC6761")'
                    app:chipBackgroundColor="@color/cardBrickRed"
                    style="@style/Widget.MaterialComponents.Chip.Filter" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_blue"
                    android:onClick='@{(color) -> viewModel.setCustomBackground("#FF0B87BD")'
                    app:chipBackgroundColor="@color/cardRoyalBlue"
                    style="@style/Widget.MaterialComponents.Chip.Filter" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_pink"
                    android:onClick='@{(color) -> viewModel.setCustomBackground("#FFC2549C")'
                    app:chipBackgroundColor="@color/cardLightMagenta"
                    style="@style/Widget.MaterialComponents.Chip.Filter" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_grey"
                    android:onClick='@{(color) -> viewModel.setCustomBackground("#FF32A586")'
                    app:chipBackgroundColor="@color/cardLightGrey"
                    style="@style/Widget.MaterialComponents.Chip.Filter" />

            </com.google.android.material.chip.ChipGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/label_confirm"
                android:textAllCaps="false"
                android:backgroundTint="@color/secondaryColor"
                android:onClick="@{() -> viewModel.createNewCard()}"
                app:cornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addColor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>